--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_INFURA_PROJECT_ID=bf0b399e262c4eaa940d8b6934fce508
-NEXT_PUBLIC_API_URL=https://base-sepolia.infura.io/v3/
+NEXT_PUBLIC_INFURA_PROJECT_ID=dab8264a0e6f4b6e80ce6860d5b44c45
+NEXT_PUBLIC_API_URL=https://base-mainnet.infura.io/v3/
 NEXT_PUBLIC_COINGECKO_API_KEY=CG-XoFeMFvhP4rtYFfhGtnvi8Vk
