--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^1.0.0",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.3",
+    "moralis": "^2.27.2",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18",
